--- a/src/guides/main/delegation-arbitrum-university-615.yaml
+++ b/src/guides/main/delegation-arbitrum-university-615.yaml
@@ -1,6 +1,6 @@
 categories: []
 content: Representatives for token holders in Arbitrum DAO
-created: '2023-11-30T16:03:42.066Z'
+created: '2023-11-30T16:18:38.066Z'
 guideType: onboarding
 key: delegation-arbitrum-university-615
 name: Delegation
@@ -127,7 +127,7 @@ steps:
 
 
       <div align="center">
-        <img style="max-height:400px;margin-bottom:30px" src="https://d31h13bdjwgzxs.cloudfront.net/academy/arbitrum-university/Guide/delegation_arbitrum_university_615/1700050286013_screenshot_2023-11-15%20at%205.10.29%20pm.png"/>
+        <img style="max-height:400px;margin-bottom:30px" src="https://d31h13bdjwgzxs.cloudfront.net/academy/arbitrum-university/Guide/delegation_arbitrum_university_615/1701361098773_become_delegate.png"/>
       </div>
 
 
