--- a/src/guides/main/submitting-a-dao-proposal-arbitrum-university-385.yaml
+++ b/src/guides/main/submitting-a-dao-proposal-arbitrum-university-385.yaml
@@ -1,6 +1,6 @@
 categories: []
 content: Learn how to submit proposals in Arbitrum DAO
-created: '2023-11-17T16:18:17.170Z'
+created: '2023-11-30T16:51:44.166Z'
 guideType: onboarding
 key: submitting-a-dao-proposal-arbitrum-university-385
 name: Submitting a DAO proposal
@@ -21,6 +21,11 @@ steps:
       shared resources and strategic directions.
 
 
+      <div align="center">
+        <img style="max-height:400px;margin-bottom:30px" src="https://d31h13bdjwgzxs.cloudfront.net/academy/arbitrum-university/Guide/submitting_a_dao_proposal_arbitrum_university_385/1701363013716_submitting_a%20proposal.png"/>
+      </div>
+
+
       ## Types of Proposals 
 
       There are two distinct categories of AIPs (Arbitrum Improvement Proposals)
@@ -37,6 +42,11 @@ steps:
       network or taking actions that necessitate "chain owner" permissions,
       which typically means they require a higher level of authority and
       scrutiny due to their impact on the infrastructure and overall operation.
+
+
+      <div align="center">
+        <img style="max-height:400px;margin-bottom:30px" src="https://d31h13bdjwgzxs.cloudfront.net/academy/arbitrum-university/Guide/submitting_a_dao_proposal_arbitrum_university_385/1701363083949_types_of%20aips.png"/>
+      </div>
 
 
       ### Non-Constitutional AIPs
