--- a/src/guides/main/submitting-a-dao-proposal-arbitrum-university-385.yaml
+++ b/src/guides/main/submitting-a-dao-proposal-arbitrum-university-385.yaml
@@ -1,6 +1,6 @@
 categories: []
 content: Learn how to submit proposals in Arbitrum DAO
-created: '2023-11-30T16:52:09.481Z'
+created: '2023-11-30T17:08:48.445Z'
 guideType: onboarding
 key: submitting-a-dao-proposal-arbitrum-university-385
 name: Submitting a DAO proposal
@@ -145,6 +145,11 @@ steps:
       choices, including alternative designs and precedents in other projects.
 
 
+      <div align="center">
+        <img style="max-height:400px;margin-bottom:30px" src="https://d31h13bdjwgzxs.cloudfront.net/academy/arbitrum-university/Guide/submitting_a_dao_proposal_arbitrum_university_385/1701364100110_structure.png"/>
+      </div>
+
+
       6. **Steps to Implement**: Detail the actionable steps required to execute
       the AIP, along with estimates of costs, manpower, and other necessary
       resources. For AIPs involving third parties, include the necessary legal
@@ -184,11 +189,6 @@ steps:
       comprehensive, and aligned with the community's expectations, increasing
       its chances of being favorably received. In the diagram below, find the
       outline of a dummy proposal for more refernce
-
-
-      <div align="center">
-        <img style="max-height:400px;margin-bottom:30px" src="https://d31h13bdjwgzxs.cloudfront.net/academy/arbitrum-university/Guide/submitting_a_dao_proposal_arbitrum_university_385/1700140341456_screenshot_2023-11-16%20at%206.11.18%20pm.png"/>
-      </div>
     name: 'Proposal Structure '
     stepItems: []
     uuid: e874df3d-4d99-43fd-a236-1d9e72ec54c1
