update guide Foundation Grants

--- a/src/guides/main/foundation-grants-arbitrum-university-884.yaml
+++ b/src/guides/main/foundation-grants-arbitrum-university-884.yaml
@@ -1,6 +1,6 @@
 categories: []
 content: Learn how to apply for foundation grants!
-created: '2023-12-01T11:01:37.239Z'
+created: '2023-12-01T11:25:28.446Z'
 guideType: onboarding
 key: foundation-grants-arbitrum-university-884
 name: Foundation Grants
@@ -163,6 +163,12 @@ steps:
       4. Proof of your project's sustainability post-grant completion, including
       a strategic plan for ongoing maintenance and continuous growth within the
       Arbitrum ecosystem.
+
+
+      <div align="center">
+        <img style="max-height:400px;margin-bottom:30px" src="https://d31h13bdjwgzxs.cloudfront.net/academy/arbitrum-university/Guide/foundation_grants_arbitrum_university_884/1701429906511_guidelines.png"/>
+      </div>
+
 
       5. A commitment from your team to fulfill the project's objectives,
       evidenced by a solid history of success and the capability to manage
