update guide Foundation Grants

--- a/src/guides/main/foundation-grants-arbitrum-university-884.yaml
+++ b/src/guides/main/foundation-grants-arbitrum-university-884.yaml
@@ -1,6 +1,6 @@
 categories: []
 content: Learn how to apply for foundation grants!
-created: '2023-12-01T11:25:28.446Z'
+created: '2023-12-01T11:31:13.580Z'
 guideType: onboarding
 key: foundation-grants-arbitrum-university-884
 name: Foundation Grants
@@ -229,6 +229,11 @@ steps:
         - **NFT**: Innovations in dynamic, gamified, collectible NFTs, generative art, membership passes, and applications in music, sports, or finance.
         - **DAOs**: Initiatives that promote community involvement and build upon existing DAOs within Arbitrum.
         - **Social Platforms**: Decentralized social media and community engagement projects, creator platforms, fan engagement, and loyalty programs.
+
+      <div align="center">
+        <img style="max-height:400px;margin-bottom:30px" src="https://d31h13bdjwgzxs.cloudfront.net/academy/arbitrum-university/Guide/foundation_grants_arbitrum_university_884/1701430254176_categories.png"/>
+      </div>
+
 
       ## Infrastructure and Tools
 
