update guide Foundation Grants

--- a/src/guides/main/foundation-grants-arbitrum-university-884.yaml
+++ b/src/guides/main/foundation-grants-arbitrum-university-884.yaml
@@ -1,6 +1,6 @@
 categories: []
 content: Learn how to apply for foundation grants!
-created: '2023-12-01T11:39:24.477Z'
+created: '2023-12-01T11:47:34.843Z'
 guideType: onboarding
 key: foundation-grants-arbitrum-university-884
 name: Foundation Grants
@@ -362,15 +362,15 @@ steps:
       post-prototype completion.
 
 
-      <div align="center">
-        <img style="max-height:400px;margin-bottom:30px" src="https://d31h13bdjwgzxs.cloudfront.net/academy/arbitrum-university/Guide/foundation_grants_arbitrum_university_884/1700148690645_screenshot_2023-11-16%20at%208.29.47%20pm.png"/>
-      </div>
-
-
       4. **Testing Phase**: A viable but unrefined product undergoes public or
       semi-public testing. Continuous iterations are made based on user
       feedback, with new features being added. Revenue models may start being
       tested, marketing efforts increase, and partnerships are explored.
+
+
+      <div align="center">
+        <img style="max-height:400px;margin-bottom:30px" src="https://d31h13bdjwgzxs.cloudfront.net/academy/arbitrum-university/Guide/foundation_grants_arbitrum_university_884/1701431231143_project_lifecycle.png"/>
+      </div>
 
 
       5. **Launch Phase**: The project officially launches for public use.
