update guide Foundation Grants

--- a/src/guides/main/foundation-grants-arbitrum-university-884.yaml
+++ b/src/guides/main/foundation-grants-arbitrum-university-884.yaml
@@ -1,12 +1,12 @@
 categories: []
 content: Learn how to apply for foundation grants!
-created: '2023-12-01T11:47:34.843Z'
+created: '2023-12-01T16:26:20.062Z'
 guideType: onboarding
 key: foundation-grants-arbitrum-university-884
 name: Foundation Grants
 publishStatus: Live
 steps:
-  - content: >
+  - content: >-
       ## What are Foundation Grant Program?
 
       The Arbitrum Foundation's Grant Program is a strategic initiative designed
@@ -26,7 +26,7 @@ steps:
 
 
       <div align="center">
-        <img style="max-height:400px;margin-bottom:30px" src="https://d31h13bdjwgzxs.cloudfront.net/academy/arbitrum-university/Guide/foundation_grants_arbitrum_university_884/1701428421611_foundation_programs.png"/>
+        <img style="max-height:400px;margin-bottom:30px" src="https://d31h13bdjwgzxs.cloudfront.net/academy/arbitrum-university/Guide/foundation_grants_arbitrum_university_884/1701447942617_grant_programs%20of%20arbitrum.png"/>
       </div>
 
 
