update timelines arbitrum-big-launches-arbitrum-university

--- a/src/timelines/main/arbitrum-big-launches-arbitrum-university.yaml
+++ b/src/timelines/main/arbitrum-big-launches-arbitrum-university.yaml
@@ -1,26 +1,79 @@
 id: arbitrum-big-launches-arbitrum-university
 name: Arbitrum Big Launches
-excerpt: |-
-  Arbitrum Big Launches
-
-  Arbitrum Big Launches
-content: |-
-  Arbitrum Big Launches
-  Arbitrum Big Launches
-  Arbitrum Big Launches
-  Arbitrum Big Launches
+excerpt: >-
+  Arbitrum ignites the blockchain world with groundbreaking launches, fueling
+  innovation and scalability in the crypto universe.
+content: >-
+  This timeline is an informative chronicle showcasing the key milestones and
+  significant developments in the journey of Arbitrum. It highlights the major
+  events, including the initial launch date and subsequent updates. It serves as
+  a comprehensive reference for enthusiasts to track the progress and evolution
+  of Arbitrum in enhancing the scalability, speed, and efficiency of Ethereum
+  transactions. Each entry in the timeline is succinctly described, providing
+  insights into how each launch or update has contributed to Arbitrum's growing
+  impact in the blockchain and cryptocurrency space.
 publishStatus: ''
 events:
-  - title: Latest 1
+  - title: Arbitrum One
+    uuid: fa9f4d2c-7df4-41b5-a874-b8aee77dbf2c
+    date: 2021-08-31T16:28:43.000Z
+    summary: >-
+      Arbitrum One's launch heralds a new era in Ethereum scalability,
+      seamlessly blending enhanced transaction throughput with optimal security
+      and decentralization.
+    fullDetails: >-
+      Arbitrum One's launch marks a significant leap forward in the Ethereum
+      ecosystem. This is designed to greatly enhance the transaction capacity
+      and speed of the Ethereum network while maintaining its robust security
+      and decentralization features. By utilizing innovative rollup technology,
+      Arbitrum One efficiently processes transactions off the main Ethereum
+      chain, significantly reducing gas costs and congestion. This launch has
+      been pivotal for developers and users in the decentralized application
+      (dApp) space, offering a more scalable, efficient, and cost-effective
+      environment for building and using Ethereum-based applications. Arbitrum
+      One stands as a milestone in the quest for a more scalable and
+      user-friendly blockchain experience.
+    moreLink: https://messari.io/project/arbitrum/profile
+  - title: Arbitrum Roll up
     uuid: f12195e2-843d-4c1e-9cf8-a12ff21324d0
-    date: 2023-12-05T15:32:19.969Z
-    summary: Arbitrum Big Launches Arbitrum Big Launches
-    fullDetails: ''
-  - title: Arbitrum Launch
+    date: 2020-02-11T15:32:19.000Z
+    summary: >-
+      Arbitrum Rollup's launch revolutionizes Ethereum scalability, offering
+      unprecedented transaction speed and efficiency, while maintaining robust
+      security
+    fullDetails: >-
+      Arbitrum Rollup's launch represents a groundbreaking advancement in
+      blockchain technology, specifically addressing the scalability and
+      efficiency challenges faced by the Ethereum network. As a layer-2
+      solution, Arbitrum Rollup operates on top of Ethereum, allowing for faster
+      and more cost-effective transactions by bundling multiple transactions
+      into a single rollup block. This method significantly reduces the load on
+      the Ethereum mainnet, leading to lower gas fees and quicker processing
+      times. The launch of Arbitrum Rollup is especially crucial for the
+      development and deployment of decentralized applications (dApps), as it
+      ensures a more scalable, efficient, and user-friendly platform, while
+      maintaining the security and decentralization principles of the Ethereum
+      blockchain.
+    moreLink: https://messari.io/project/arbitrum/profile
+  - title: Launch of Arbitrum
     uuid: 1336fb8f-b948-4c95-9986-8a27a4206e34
-    date: 2023-12-25T15:32:23.000Z
-    summary: Arbitrum Big Launches
-    fullDetails: ''
+    date: 2019-04-15T15:32:23.000Z
+    summary: >-
+      Arbitrum's launch has revolutionized Ethereum's scalability, offering
+      lightning-fast transactions and reduced fees, reshaping the DeFi
+      landscape.
+    fullDetails: >-
+      Arbitrum's launch marked a significant milestone in the Ethereum
+      ecosystem, introducing a novel layer-2 scaling solution designed to
+      enhance transaction efficiency and scalability. By employing a unique form
+      of technology, Arbitrum significantly reduces gas costs and increases
+      transaction throughput, without compromising on security. This launch has
+      been pivotal in addressing Ethereum's scalability challenges, offering a
+      more cost-effective and faster platform for decentralized applications
+      (dApps), thereby attracting a wide range of developers and users within
+      the blockchain community. The implementation of Arbitrum aims to foster a
+      more accessible and efficient decentralized finance (DeFi) environment.
+    moreLink: https://messari.io/project/arbitrum/profile
 admins: []
 tags: []
 priority: 50
