update timelines arbitrum-big-launches-arbitrum-university

--- a/src/timelines/main/arbitrum-big-launches-arbitrum-university.yaml
+++ b/src/timelines/main/arbitrum-big-launches-arbitrum-university.yaml
@@ -14,6 +14,48 @@ content: >-
   impact in the blockchain and cryptocurrency space.
 publishStatus: ''
 events:
+  - title: Arbitrum Nova
+    uuid: a2807afb-30a9-4e75-ae47-2481703890b7
+    date: 2022-08-09T16:42:19.000Z
+    summary: >-
+      Arbitrum Nova's launch ushers in a new era of ultra-efficient, low-cost
+      blockchain transactions, tailored for gaming and social applications
+    fullDetails: >-
+      Arbitrum Nova's launch event signifies a major advancement in the
+      blockchain technology space, specifically targeting the gaming and social
+      media sectors. As a specialized layer-2 solution on the Ethereum network,
+      Nova is engineered to handle high-volume, low-cost transactions
+      efficiently, making it an ideal platform for decentralized applications
+      (dApps) in gaming and social media where fast and frequent transactions
+      are essential. By leveraging Arbitrum's rollup technology, Nova provides a
+      solution that significantly reduces gas fees and transaction latency. This
+      launch represents a strategic expansion of Arbitrum's offerings,
+      addressing the specific needs of a rapidly growing segment in the
+      blockchain industry and marking a key step towards widespread adoption of
+      blockchain technology in mainstream applications.
+    moreLink: https://messari.io/project/arbitrum/profile
+  - title: Arbitrum Anytrust
+    uuid: c8855f08-2ac0-4e03-b5d6-5479d99cfe76
+    date: 2022-07-11T16:37:57.000Z
+    summary: >-
+      Arbitrum AnyTrust's launch elevates blockchain trust and efficiency,
+      offering a unique blend of speed, security, and reduced reliance on full
+      decentralization.
+    fullDetails: >-
+      The launch of Arbitrum AnyTrust marks a notable innovation in the
+      blockchain sphere, introducing a unique approach to scaling Ethereum.
+      AnyTrust technology focuses on balancing trust and efficiency by allowing
+      a less decentralized system to operate with a higher degree of trust among
+      a small set of validators. This design significantly reduces the
+      computational and storage requirements compared to full decentralization,
+      leading to faster transaction processing and lower costs. Arbitrum
+      AnyTrust is particularly advantageous for applications where speed and
+      efficiency are paramount, and absolute decentralization is less critical.
+      This launch represents a strategic move in expanding the range of
+      scalability solutions available for Ethereum, catering to a diverse set of
+      needs and use cases in the blockchain ecosystem.
+    moreLink: >-
+      https://medium.com/offchainlabs/introducing-nova-arbitrum-anytrust-mainnet-is-open-for-developers-9a54692f345e
   - title: Arbitrum One
     uuid: fa9f4d2c-7df4-41b5-a874-b8aee77dbf2c
     date: 2021-08-31T16:28:43.000Z
