update timelines arbitrums-pathway-key-events-chronology-arbitrum-university

--- a/src/timelines/main/timelines.yaml
+++ b/src/timelines/main/timelines.yaml
@@ -1,2 +1,3 @@
 timelines:
   - arbitrum-big-launches-arbitrum-university.yaml
+  - arbitrums-pathway-key-events-chronology-arbitrum-university.yaml
